# backend/swagger_output.json
@@ -7,6 +7,12 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "Contacts",
+      "description": "Endpoints"
+    }
+  ],
   "schemes": [
     "http",
     "https"
@@ -20,7 +26,10 @@
   "paths": {
     "/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Homepage"
+        ],
+        "description": "Home endpoint.",
         "parameters": [],
         "responses": {
           "200": {
@@ -31,7 +40,10 @@
     },
     "/contacts/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Displays all contacts.",
         "parameters": [],
         "responses": {
           "200": {
@@ -43,36 +55,27 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Adding a new contact to the collection",
         "parameters": [
           {
-            "name": "body",
+            "name": "contact",
             "in": "body",
+            "description": "Information of a contact. All fields are required",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/AddContact"
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Returns contact \"_id\" autogenerated by mongodb",
+            "schema": {
+              "$ref": "#/definitions/contact_id"
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -82,18 +85,25 @@
     },
     "/contacts/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Fetching a contact through _id from mongodb collection.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of contact."
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Contact data fetched from collection in db.",
+            "schema": {
+              "$ref": "#/definitions/Contact"
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -101,42 +111,34 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Updating a contact from mongodb collection through _id.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of contact to be updated."
           },
           {
-            "name": "body",
+            "name": "contact",
             "in": "body",
+            "description": "Information of a contact being updated. All fields are required",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/AddContact"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Returns newly update contact in this format",
+            "schema": {
+              "$ref": "#/definitions/Contact"
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -144,22 +146,98 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Deletes a contact",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of contact to be deleted."
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Delete response",
+            "schema": {
+              "$ref": "#/definitions/delRes"
+            }
           },
           "500": {
             "description": "Internal Server Error"
           }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Contact": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string",
+          "example": "john"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "johndoe@swagger.com"
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "red"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "2023/1/27"
+        }
+      }
+    },
+    "AddContact": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string",
+          "example": "john"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "johndoe@swagger.com"
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "red"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "2023/1/27"
+        }
+      }
+    },
+    "contact_id": {
+      "type": "string",
+      "example": "63caeccb50a864c0afbdb910"
+    },
+    "delRes": {
+      "type": "object",
+      "properties": {
+        "acknowledged": {
+          "type": "boolean",
+          "example": true
+        },
+        "deletedCount": {
+          "type": "number",
+          "example": 1
         }
       }
     }
